addings upgrade secure header to html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!doctype html>
 <html lang="en">
+<header>
+<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+</header>
 <head>
 	<meta charset="UTF-8">
 	<title>Stack Overflow - Extraction of API elements for Documentation</title>
