--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
 			<p>Error ! things went wrong with your request. Here's what we know:</p>
 		</div>
 	</div>
-	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
 	<script src="js/app.js"></script>
 </body>
 </html>
